New-Upload-1755854042013/objects/AsyncIDContainer__c.object
<CustomObject>
    <fields>
        <fullName>AsyncId__c</fullName>
        <label>AsyncId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamedCredential__c</fullName>
        <label>NamedCredential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>OrgId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AsyncIdContainer</label>
    <nameField>
        <label>Async Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AsyncIdContainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>